feat(jdk): support jdk 17